--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <label for="psw-login" class="psw-label">Password</label>
                 <input type="password" name="psw-login" id="psw-login" class="psw-login input-login" placeholder="1234" required>
 
-                <button class="submit" type="submit">LOGIN</button>
+                <button class="submit" type="submit">LOGIN BTN</button>
                 <p class="skip">Skip login</p>
 
                 <div class="indicator"><ion-icon name="log-in-outline" class="icon"></ion-icon></box-icon></div>
